fix: stop unsupported animation on firefox etc.

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -60,8 +60,10 @@ $text-font: 'Helvetica Neue', 'Helvetica', '微软雅黑', 'Arial', 'sans-serif'
 @mixin header-scroll-animation {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
-  animation-timeline: scroll();
-  animation-range: 0 10rem;
+  @supports (animation-timeline: scroll()) {
+    animation-timeline: scroll();
+    animation-range: 0 6rem;
+  }
 }
 
 ::selection {
